src/BRepToIGES/BRepToIGES_BRShell.cxx
@@ -249,9 +249,15 @@ Handle(IGESData_IGESEntity) BRepToIGES_BRShell ::TransferFace(const TopoDS_Face&
 
   // returns the TrimmedSurface
   // --------------------------
-  Standard_Boolean Flag = Standard_True; // pour l`instant
+  Standard_Boolean Flag = Standard_True; 
   Handle(IGESGeom_TrimmedSurface) TrimmedSurf = new IGESGeom_TrimmedSurface;
-  TrimmedSurf-> Init (ISurf, Flag, IOuter, Tab);
+  if (BRep_Tool::NaturalRestriction(start)) {
+    //if face bounds and surface bounds are same, outer wire is unnecessary
+    Standard_Boolean Flag = Standard_False; 
+    TrimmedSurf-> Init (ISurf, Flag, NULL, Tab);
+  }
+  else
+    TrimmedSurf-> Init (ISurf, Flag, IOuter, Tab);
 
   res = TrimmedSurf;
   if (IsReversed) myface.Reverse();
